--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "babel-runtime": "6.x",
     "react": "15.x",
     "react-dom": "15.x",
