--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "babel-runtime": "6.x",
+    "get-next-page": "^1.0.0",
     "react": "15.x",
     "react-dom": "15.x",
     "react-router": "^2.5.1"
