--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "get-next-page": "^1.0.0",
     "react": "15.x",
     "react-dom": "15.x",
+    "react-html5video": "^2.0.0",
     "react-router": "^2.5.1"
   },
   "devDependencies": {
